@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-09-21 15:41:04+01:00 - build 6562
+
+1. gh-939: Set ECSTATE_SAVED only when the file was saved by the user.
+
+--------------------------------------------------------------------------------
 MZK 2025-09-20 15:47:03-04:00 - build 6561
 
 1. gh-1009: gh-1010: gh-1011: An item in Find All menu can be longer than max short.
